
v3.25
=====
Changes:
* string: HX_split4 renamed to HX_split_inplace
* string: HX_split5 renamed to HX_split_fixed
* defs.h: removed partially implementation of FIELD_SIZEOF


v3.24 (2018-10-17)
==================
Fixes:
- defs: avoid compiler warning when using HX_list_for_each when used in C++
- opt: synchronize HXOPT_AUTOHELP C behavior to C++ mode


v3.23 (2018-08-28)
==================
Enhancements:
- opt: the option parser now recognizes long option abbreviations
- io: use modern readdir rather than readdir_r


v3.22 (2014-08-25)
==================
Enhancements:
- string: add the HXQUOTE_SQLBQUOTE quoting variant


v3.21 (2014-06-02)
==================
Enhancements:
- HXformat_add() now supports HXTYPE_MCSTR objects (with and without
  HXTYPE_IMMED)
- libxml_helper: New xml_getnsprop() function that gets the value of a
  property (element attribute) by namespace prefix


v3.20 (2014-04-18)
==================
Enhancements:
- resolve some link errors when built with Solaris ld


v3.19 (2014-02-21)
==================
Enhancements:
- string: add the HXQUOTE_SQLSQUOTE quoting variant
Internal changes:
- format: rework function calling code to support extending with functions


v3.18 (2014-03-01)
==================
Enhancements:
- string: add the HX_stpltrim function
Fixes:
- Make HX_strltrim move the correct number of bytes
Changes:
- remove wxCFF from wx_helper.hpp


v3.17 (2013-11-16)
==================
Enhancements:
- defs: add HX_SIZET_FMT and HX_LONGLONG_FMT
- support for Win64
Fixes:
- compile warnings on mingw were addressed


v3.16 (2013-09-29)
==================
Enhancements:
- format: remove 256-char format key length limit
Fixes:
- compile errors on mingw were addressed


v3.15 (2013-03-07)
==================
Enhancements:
- string: add HX_strchr2
- string: add HXQUOTE_URIENC mechanism for HX_strquote
Changes:
- defs: HXsizeof_member becomes FIELD_SIZEOF
  (to match the Linux kernel's macro name)


v3.14.1 (2012-12-31)
====================
Fixes: