@@ -144,7 +144,6 @@ RMV	MinVer	FirstA	Name
 2.6	2.6	2.6	wxfv8
 2.6	2.6	2.6	wxtu8
 2.6	2.6	2.6	xml_strcasecmp
-2.3	2.0	2.0	offsetof
 2.3	1.25	1.25	HXmc_length
 2.2	2.2	2.2	HXPROC_A0
 2.2	2.2	2.2	HXPROC_EXECV
